[gd_scene load_steps=7 format=2]

[ext_resource path="res://Market/Player_list.gd" type="Script" id=1]
[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Market/Pannel.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.560784, 0.658824, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[node name="Market" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_top = -1.1225
margin_right = -1.33484
margin_bottom = -1.1225
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="Panel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 638.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListArea" type="VBoxContainer" parent="Panel/ScrollContainer2"]
margin_right = 4220.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavBar" type="HBoxContainer" parent="Panel/ScrollContainer2/ListArea"]
margin_right = 4220.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Name"

[node name="position" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 204.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Position"

[node name="foot" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 278.0
margin_right = 338.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Foot"

[node name="league" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 342.0
margin_right = 412.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 0 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "League"

[node name="age" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 416.0
margin_right = 531.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Age"

[node name="height" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 535.0
margin_right = 650.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Height"

[node name="overall" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 654.0
margin_right = 769.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Overall"

[node name="crossing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 773.0
margin_right = 888.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Crossing"

[node name="finishing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 892.0
margin_right = 1007.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Finishing"

[node name="short_passing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1011.0
margin_right = 1126.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Short passing"

[node name="volleys" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1130.0
margin_right = 1245.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Volleys"

[node name="dribbling" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1249.0
margin_right = 1364.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Dribbling"

[node name="curve" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1368.0
margin_right = 1483.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Curve"

[node name="long_passing" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1487.0
margin_right = 1602.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Long passing"

[node name="ball_control" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1606.0
margin_right = 1721.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Ball control"

[node name="acceleration" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1725.0
margin_right = 1840.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Acceleration"

[node name="sprint_speed" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1844.0
margin_right = 1959.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Sprint speed"

[node name="agility" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 1963.0
margin_right = 2078.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Agility"

[node name="reactions" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2082.0
margin_right = 2197.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Reactions"

[node name="balance" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2201.0
margin_right = 2316.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Balance"

[node name="shot_power" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2320.0
margin_right = 2435.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Shot power"

[node name="strength" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2439.0
margin_right = 2554.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Strength"

[node name="long_shots" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2558.0
margin_right = 2673.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Long shots"

[node name="aggression" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2677.0
margin_right = 2792.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Aggression"

[node name="interceptions" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2796.0
margin_right = 2911.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Interceptions"

[node name="positioning" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 2915.0
margin_right = 3030.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Positioning"

[node name="vision" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3034.0
margin_right = 3149.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Vision"

[node name="penalties" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3153.0
margin_right = 3268.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Penalties"

[node name="marking" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3272.0
margin_right = 3387.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Marking"

[node name="standing_tackle" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3391.0
margin_right = 3506.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Standing tackle"

[node name="sliding_tackle" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3510.0
margin_right = 3625.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "Sliding tackle"

[node name="gk_diving" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3629.0
margin_right = 3744.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Diving"

[node name="gk_handling" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3748.0
margin_right = 3863.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Handling"

[node name="gk_kicking" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3867.0
margin_right = 3982.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Kicking"

[node name="gk_positioning" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 3986.0
margin_right = 4101.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Positioning"

[node name="gk_reflexes" type="Button" parent="Panel/ScrollContainer2/ListArea/NavBar" groups=[
"nav_bar",
]]
margin_left = 4105.0
margin_right = 4220.0
margin_bottom = 30.0
rect_min_size = Vector2( 115, 30 )
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GK Reflexes"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer2/ListArea"]
margin_top = 34.0
margin_right = 4220.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/ScrollContainer2/ListArea/HBoxContainer2"]
margin_right = 4220.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List_players" type="VBoxContainer" parent="Panel/ScrollContainer2/ListArea/HBoxContainer2/ScrollContainer"]
margin_right = 4220.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel"]
margin_top = 650.0
margin_right = 1280.0
margin_bottom = 703.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col1" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_right = 424.0
margin_bottom = 53.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer3/col1"]
margin_top = 16.0
margin_right = 424.0
margin_bottom = 36.0
alignment = 1

[node name="previous" type="Button" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 112.0
margin_right = 179.0
margin_bottom = 20.0
text = "Previous"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 183.0
margin_right = 198.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="start" type="Label" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 202.0
margin_top = 3.0
margin_right = 210.0
margin_bottom = 17.0
text = "0"

[node name="separator" type="Label" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 214.0
margin_top = 3.0
margin_right = 219.0
margin_bottom = 17.0
text = "/"

[node name="end" type="Label" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 223.0
margin_top = 3.0
margin_right = 247.0
margin_bottom = 17.0
text = "100"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 251.0
margin_right = 266.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )

[node name="next" type="Button" parent="Panel/HBoxContainer3/col1/HBoxContainer"]
margin_left = 270.0
margin_right = 312.0
margin_bottom = 20.0
text = "Next"

[node name="col2" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 53.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer3/col2"]
margin_right = 424.0
margin_bottom = 53.0
alignment = 1

[node name="Back" type="Button" parent="Panel/HBoxContainer3/col2/HBoxContainer"]
margin_left = 105.0
margin_right = 221.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
text = "BACK"

[node name="Buy" type="Button" parent="Panel/HBoxContainer3/col2/HBoxContainer"]
margin_left = 225.0
margin_right = 318.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "BUY"

[node name="col3" type="VBoxContainer" parent="Panel/HBoxContainer3"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 53.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer3/col3"]
margin_top = 19.0
margin_right = 424.0
margin_bottom = 33.0
alignment = 1

[node name="YourMoneylbl" type="Label" parent="Panel/HBoxContainer3/col3/HBoxContainer"]
margin_left = 127.0
margin_right = 211.0
margin_bottom = 14.0
text = "Yout money :"

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer3/col3/HBoxContainer"]
margin_left = 215.0
margin_right = 220.0
margin_bottom = 14.0
rect_min_size = Vector2( 5, 0 )

[node name="YourMoneylbl2" type="Label" parent="Panel/HBoxContainer3/col3/HBoxContainer"]
margin_left = 224.0
margin_right = 296.0
margin_bottom = 14.0
text = "10.000.000"

[node name="HTTPRequest" type="HTTPRequest" parent="Panel"]

[node name="PanelBuy" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
[connection signal="pressed" from="Panel/HBoxContainer3/col1/HBoxContainer/previous" to="Panel" method="_on_previous_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer3/col1/HBoxContainer/next" to="Panel" method="_on_next_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer3/col2/HBoxContainer/Buy" to="Panel" method="_on_Buy_pressed"]
[connection signal="request_completed" from="Panel/HTTPRequest" to="Panel" method="_on_HTTPRequest_request_completed"]
[connection signal="script_changed" from="PanelBuy" to="Panel" method="_on_PanelBuy_script_changed"]
[connection signal="visibility_changed" from="PanelBuy" to="Panel" method="_on_PanelBuy_visibility_changed"]
